# imitator

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  README.md  docker-compose.db.yml  pyproject.toml  requirements-dev.txt  requirements.txt
examples/: README.md  advanced_monitoring.py  basic_usage.py  log_rotation_example.py  real_world_simulation.py  toy_example.py
examples/logs/: add_numbers_20250704.jsonl  analyze_text_20250704.jsonl  divide_numbers_20250704.jsonl  process_data_20250704.jsonl
imitator/: __init__.py  monitor.py  storage.py  types.py
logandlearn/: __init__.py  monitor.py  storage.py  types.py
scripts/: README.md  build_package.py
tests/: conftest.py  test_advanced_features_pytest.py  test_class_methods_pytest.py  test_couchbase_connector.py  test_demo_pytest.py  test_log_rotation.py  test_mongodb_connector.py  test_performance_pytest.py  test_postgres_connector.py  test_runner_pytest.py  test_sqlite_connector.py
